# pyaedt-toolkits-antenna

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  SECURITY.md  codecov.yml  frozen.spec  ignore_words.txt  index.html  pyproject.toml  robots.txt  setup.nsi  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci_cd.yml  ci_cd_appimage.yml  ci_cd_night.yml  ci_cd_pr.yml  ci_cd_release.yml  label.yml
config/: .gitignore
cx/: create_exe.bat  extract_version.py  setup_cx.py
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 314.maintenance.md  317.maintenance.md  318.fixed.md  319.maintenance.md  320.maintenance.md  321.maintenance.md  323.fixed.md  327.maintenance.md  328.maintenance.md  329.maintenance.md  330.dependencies.md  332.maintenance.md  333.maintenance.md  335.documentation.md  339.added.md  341.documentation.md  346.added.md  351.documentation.md  352.dependencies.md  353.maintenance.md  355.maintenance.md  358.miscellaneous.md  359.maintenance.md  363.dependencies.md  366.dependencies.md  367.added.md  368.added.md  369.added.md  370.added.md  371.added.md  372.added.md  373.added.md  374.added.md  375.added.md  376.added.md  377.added.md  378.added.md  379.added.md  380.dependencies.md  381.dependencies.md  (+23 more)
doc/source/: Contributing.rst  Getting_started.rst  Install.rst  changelog.rst  conf.py  contributing.rst  create_documentation.bat  getting-started.rst  index.rst
doc/source/Antennas/: BowTie.rst  Bowtie.rst  Helix.rst  Horn.rst  Patch.rst  antenna_wizard.rst  antennas.rst  conical_spiral.rst  helix.rst  horn.rst  index.rst
doc/source/Toolkit/: api.rst  api_generic.rst  index.rst  service.rst  service_generic.rst  ui.rst
doc/source/examples/: antenna_toolkit_example.py  create_antenna_simple.py  index.rst
doc/source/getting_started/: antenna-config-example.yaml  cli_guide.rst  index.rst  installation.rst  user_guide.rst
doc/source/toolkit/: api.rst  api_generic.rst  index.rst  ui.rst
installer/: VERSION  extract_version.py
installer/assets/scripts/: uninstaller_ubuntu.sh  uninstaller_yum.sh
installer/hooks/: hook-ansys.aedt.core.py  hook-ansys.aedt.toolkits.antenna.py  hook-ansys.aedt.toolkits.common.py  hook-ansys.tools.visualization_interface.py
installer/linux/debian/: antenna_toolkit_prebuild.desktop  fpm-options-debian  installer.sh  postInstallScript.sh
requirements/: requirements_build.txt
tests/: conftest.py  test_00_common.py  test_00_service_generic.py  test_00_trl.py  test_01_patch.py  test_02_horn.py  test_03_helix.py  test_04_bowtie.py  test_05_conical_spiral.py  test_dipole_family.py  test_metadata.py  test_patch_catalog_assets.py  test_patch_synthesis_models.py  test_slot_backend_registration.py  test_slot_catalog_assets.py
tests/backend/: conftest.py  local_config.json  test_00_backend_generic.py  test_00_service_generic.py  test_01_backend_toolkit.py
tests/backend/test_antenna_api/: conftest.py
tests/backend/test_antenna_models_api/: conftest.py  test_00_common.py  test_01_patch.py  test_02_horn.py  test_03_helix.py  test_04_bowtie.py  test_05_conical_spiral.py  test_06_monopole.py  test_06_planar_spiral.py  test_06_reflector.py  test_98_export_yagiuda_assets.py  test_bowtie.py  test_catalog_notes.py  test_common.py  test_conical_spiral.py  test_custom.py  test_dipole.py  test_helix.py  test_horn.py  test_log_periodic.py  test_misc.py  test_monopole.py  test_patch.py  test_pifa.py  test_planar_spiral.py  test_slot.py  test_vivaldi.py  test_waveguide.py  test_yagiuda.py
tests/backend/tests_toolkit_api/: conftest.py  test_backend_toolkit.py  test_helix_catalog_assets.py  test_pifa_toolkit.py  test_vivaldi_toolkit.py
tests/backend/tests_toolkit_rest_api/: conftest.py  test_rest_api_toolkit.py
tests/cli/: test_cli.py  test_run_toolkit.py
tests/models/: conftest.py  local_config.json  test_00_common.py  test_01_patch.py  test_02_horn.py  test_03_helix.py  test_04_bowtie.py  test_05_conical_spiral.py
tests/service/: conftest.py  local_config.json  test_00_common.py  test_01_patch.py  test_02_horn.py  test_03_helix.py  test_04_bowtie.py  test_05_conical_spiral.py
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/_modules/: index.html
version/0.1/_sources/: contributing.rst.txt
version/0.1/toolkit/: announcement.html  api.html  api_generic.html  index.html  ui.html
version/0.2/: .buildinfo  announcement.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/_modules/: index.html
version/0.2/examples/: antenna_toolkit_example.html  antenna_toolkit_example.ipynb  create_antenna_simple.html  create_antenna_simple.ipynb  index.html
version/0.2/getting_started/: index.html  installation.html  user_guide.html
version/0.2/toolkit/: api.html  index.html  ui.html
version/0.3/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.3/_modules/: index.html
version/0.4/: announcement.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.5/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.6/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.7/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  search.html
version/0.8/: changelog.html  genindex.html  index.html  search.html  searchindex.js
version/0.9/: contributing.html  genindex.html  index.html  search.html  searchindex.js
version/dev/: .buildinfo  changelog.html  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
version/stable/: changelog.html  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
(+6534 files in other folders)
