[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-aedt-toolkits-antenna"
dynamic = ["version"]
description = "Toolkit to design antennas with Ansys AEDT."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-aedt-toolkits-common[all]"
]

[project.optional-dependencies]
all = [
    "ansys-aedt-toolkits-common[all]"
]
tests = [
    "ansys-aedt-toolkits-common[tests]"
]
doc = [
    "ansys-aedt-toolkits-common[doc]"
]
freeze = [
    "pyinstaller"
]

[tool.flit.module]
name = "ansys.aedt.toolkits.antenna"

[project.urls]
Source = "https://github.com/ansys/pyaedt-toolkits-antenna"
Issues = "https://github.com/ansys/pyaedt-toolkits-antenna/issues"
Discussions = "https://github.com/ansys/pyaedt-toolkits-antenna/discussions"
Documentation = "https://aedt.antenna.toolkit.docs.pyansys.com"
Releases = "https://github.com/ansys/pyaedt-toolkits-antenna/releases"
Changelog = "https://github.com/ansys/pyaedt-toolkits-antenna/blob/main/doc/source/changelog.rst"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt.toolkits.antenna"]
omit = [
    # Omit UI testing
    "src/ansys/aedt/toolkits/antenna/ui/*",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
xfail_strict = false
markers = [
    "patch_api: mark test as related to the patch antenna API.",
    "toolkit_api: mark test as related to the toolkit API.",
    "rest_api: mark test as related to the REST API.",
]

[tool.towncrier]
package = "ansys.aedt.toolkits.antenna"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/pyaedt-toolkits-antenna/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyaedt-toolkits-antenna/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
