[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-aedt-toolkits-antenna"
dynamic = ["version"]
description = "Toolkit to design antennas with Ansys AEDT."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-aedt-toolkits-common[all]"
]

[project.optional-dependencies]
all = [
    "ansys-aedt-toolkits-common[all]"
]
tests = [
    "ansys-aedt-toolkits-common[tests]"
]
doc = [
    "pyaedt[all]>=0.15.2",
    "recommonmark>=0.7.0,<0.8",
    "pyside6==6.9.0",
    "ansys-sphinx-theme==1.5.3",
    "numpydoc>=1.5.0,<1.10",
    "Sphinx>=7.1.0,<8.3",
    "sphinx-copybutton>=0.5.0,<0.6",
    "sphinx-autobuild==2021.3.14; python_version == '3.8'",
    "sphinx-autobuild==2024.10.3; python_version > '3.8'",
    "nbsphinx>=0.9.0,<0.10",
    "sphinx_design",
    "jupytext",
    "ipython>=8.13.0,<9.1",
    "jupyterlab>=4.0.0,<4.5",
    "pypandoc>=1.10.0,<1.16",
    "ipywidgets",
]
freeze = [
    "pyinstaller"
]

[tool.flit.module]
name = "ansys.aedt.toolkits.antenna"

[project.urls]
Source = "https://github.com/ansys/pyaedt-toolkits-antenna"
Issues = "https://github.com/ansys/pyaedt-toolkits-antenna/issues"
Discussions = "https://github.com/ansys/pyaedt-toolkits-antenna/discussions"
Documentation = "https://aedt.antenna.toolkit.docs.pyansys.com"
Releases = "https://github.com/ansys/pyaedt-toolkits-antenna/releases"
Changelog = "https://github.com/ansys/pyaedt-toolkits-antenna/blob/main/doc/source/changelog.rst"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt.toolkits.antenna"]
omit = [
    # Omit UI testing
    "src/ansys/aedt/toolkits/antenna/ui/*",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
xfail_strict = false
markers = [
    "patch_api: mark test as related to the patch antenna API.",
    "toolkit_api: mark test as related to the toolkit API.",
    "rest_api: mark test as related to the REST API.",
]

[tool.towncrier]
package = "ansys.aedt.toolkits.antenna"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/pyaedt-toolkits-antenna/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyaedt-toolkits-antenna/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
